# salary-management

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: employees.py  metadata.py  salary_insights.py
backend/app/constants/: country_currency.py
backend/app/core/: config.py  constants.py  database.py
backend/app/models/: __init__.py  employee.py
backend/app/schemas/: employee.py  pagination.py  salary_insights.py
backend/app/utils/: normalization.py  validators.py
backend/data/: first_names.txt  last_names.txt
backend/scripts/: seed_employees.py  seed_equivalent.py  seed_random.py
backend/tests/: test_country_currency_validation.py  test_create_employee.py  test_delete_employee.py  test_get_employee.py  test_health.py  test_list_employees.py  test_metadata.py  test_salary_insights.py  test_update_employee.py
docs/: ai-usage-notes.md  ai-usage.md  api-overview.md  architecture-notes.md  architecture.md  seeding-notes.md  tradeoffs.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: employees.js
frontend/src/components/: CreateEmployeeModal.jsx  EditEmployeeModal.jsx  EmployeeFilters.jsx  EmployeeList.jsx  EmployeeSearch.jsx  EmployeeTable.jsx  SalaryInsights.jsx
frontend/src/layouts/: AppLayout copy.jsx  AppLayout.jsx
frontend/src/pages/: AnalyticsPage.jsx  DashboardPage.jsx  EmployeeDetailsPage.jsx  EmployeesPage.jsx
(+31 files in other folders)
